# kpcodes

./: 2.cpp  CMakeLists.txt  Makefile  README.md  a.out  knapgen.cpp  knapgenss.cpp  smartdp.cpp  ssumsimp.cpp  ssumsimpomp.cpp  ssumsmart.cpp  ssumsmartomp.cpp  ssumultra.cpp  tabdp.cpp  tabdpomp.cpp  vectordp.cpp  vectordppar.cpp
inputs/Almost_strongly_correlated_instances/: Almost_strongly_correlated_instances_200_50000_001_841287  Almost_strongly_correlated_instances_200_50000_002_851141  Almost_strongly_correlated_instances_200_50000_003_841977  Almost_strongly_correlated_instances_200_50000_004_877801  Almost_strongly_correlated_instances_200_50000_005_883947  Almost_strongly_correlated_instances_200_50000_006_1723869  Almost_strongly_correlated_instances_200_50000_007_1564683  Almost_strongly_correlated_instances_200_50000_008_1666018  Almost_strongly_correlated_instances_200_50000_009_1696641  Almost_strongly_correlated_instances_200_50000_010_1605235  Almost_strongly_correlated_instances_200_50000_011_2305093  Almost_strongly_correlated_instances_200_50000_012_2319763  Almost_strongly_correlated_instances_200_50000_013_2691673  Almost_strongly_correlated_instances_200_50000_014_2517444  Almost_strongly_correlated_instances_200_50000_015_2475316  Almost_strongly_correlated_instances_200_50000_016_3320498  Almost_strongly_correlated_instances_200_50000_017_3626911  Almost_strongly_correlated_instances_200_50000_018_3433052  Almost_strongly_correlated_instances_200_50000_019_3261802  Almost_strongly_correlated_instances_200_50000_020_3092566  Almost_strongly_correlated_instances_200_50000_021_4410520  Almost_strongly_correlated_instances_200_50000_022_4133046  (+3 more)
(+180 files in other folders)
