project (Knapsack)
add_executable(knapgen knapgen.cpp)
add_executable(tabdp tabdp.cpp)
add_executable(ssumsimp ssumsimp.cpp)
add_executable(ssumsmart ssumsmart.cpp)
add_executable(ssumultra ssumultra.cpp)
add_executable(tabdpomp tabdpomp.cpp)
add_executable(ssumsimpomp ssumsimpomp.cpp)
add_executable(ssumsmartomp ssumsmartomp.cpp)
add_executable(knapgenss knapgenss.cpp)
target_compile_options(tabdpomp PRIVATE -fopenmp)
target_link_libraries(tabdpomp PRIVATE -fopenmp)
target_compile_options(ssumsimpomp PRIVATE -fopenmp)
target_link_libraries(ssumsimpomp PRIVATE -fopenmp)
target_compile_options(ssumsmartomp PRIVATE -fopenmp)
target_link_libraries(ssumsmartomp PRIVATE -fopenmp)
